{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 256,
  "lineage": "f6ee932c-f1b6-3aa1-b25c-9a6b33906026",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b3da994d7841aa9",
            "arn": "arn:aws:ec2:us-east-1:861276102771:elastic-ip/eipalloc-04b3da994d7841aa9",
            "association_id": "eipassoc-042371a183b6fe67b",
            "domain": "vpc",
            "id": "eipalloc-04b3da994d7841aa9",
            "instance": "i-00a20ce2c27fba0ec",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09c0613f639bf057c",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-98-91-120-25.compute-1.amazonaws.com",
            "public_ip": "98.91.120.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "snake-mvp-eip",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "tags_all": {
              "Name": "snake-mvp-eip",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861276102771:security-group/sg-0a3ac232b5cbec1d9",
            "description": "EC2 SG for snake server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3ac232b5cbec1d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "108.6.200.75/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "snake-mvp-ec2-sg",
            "name_prefix": "",
            "owner_id": "861276102771",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "snake-mvp-ec2-sg",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "tags_all": {
              "Name": "snake-mvp-ec2-sg",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "timeouts": null,
            "vpc_id": "vpc-047361e3899a8d917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861276102771:internet-gateway/igw-0fd8010c98819a923",
            "id": "igw-0fd8010c98819a923",
            "owner_id": "861276102771",
            "tags": {
              "Name": "snake-mvp-igw",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "tags_all": {
              "Name": "snake-mvp-igw",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "vpc_id": "vpc-047361e3899a8d917"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd8010c98819a923",
            "id": "r-rtb-0b89b3d25eb8b66fb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b89b3d25eb8b66fb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861276102771:route-table/rtb-0b89b3d25eb8b66fb",
            "id": "rtb-0b89b3d25eb8b66fb",
            "owner_id": "861276102771",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd8010c98819a923",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "snake-mvp-public-rt",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "tags_all": {
              "Name": "snake-mvp-public-rt",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "timeouts": null,
            "vpc_id": "vpc-047361e3899a8d917"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5e31edd00fa05ea",
            "route_table_id": "rtb-0b89b3d25eb8b66fb",
            "subnet_id": "subnet-003dd04675494cd74"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861276102771:subnet/subnet-003dd04675494cd74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003dd04675494cd74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "861276102771",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "snake-mvp-public-subnet",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "tags_all": {
              "Name": "snake-mvp-public-subnet",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "vpc_id": "vpc-047361e3899a8d917"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:861276102771:vpc/vpc-047361e3899a8d917",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07ae4c3bb2044c83b",
            "default_route_table_id": "rtb-052b5ee8a20800eca",
            "default_security_group_id": "sg-07805d7afdab48214",
            "dhcp_options_id": "dopt-06ce9effc4227e550",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-047361e3899a8d917",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052b5ee8a20800eca",
            "owner_id": "861276102771",
            "tags": {
              "Name": "snake-mvp-vpc",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            },
            "tags_all": {
              "Name": "snake-mvp-vpc",
              "environment": "mvp",
              "owner": "denis_pm",
              "project": "snake"
            }
          }
        }
      ]
    }
  ]
}